fork it . starting ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,8 @@
 
         <activity android:name=".fest_on_open" />
 
-        <activity android:name=".enrollment" />
+        <activity android:name=".enrollment"
+            android:label="Enroll"/>
 
         <activity android:name=".Event_lists"
         android:label="Event List"
