--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui:0.6.1'
 
     testCompile 'junit:junit:4.12'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:recyclerview-v7:24.0.1'
 }
 
